--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   },
   "dependencies": {
     "gatsby": "^2.17.6",
+    "gatsby-image": "^2.2.31",
     "gatsby-plugin-manifest": "^2.2.26",
     "gatsby-plugin-offline": "^3.0.18",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
+    "gatsby-plugin-sharp": "^2.2.37",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-remark": "^2.6.32",
+    "gatsby-transformer-sharp": "^2.3.3",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -27,6 +30,7 @@
     "universal-cookie": "^4.0.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "prettier": "^1.18.2",
     "typescript": "^3.7.2"
   },
