In-process theme-toggle

--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1",
-    "universal-cookie": "^4.0.2"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
