--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.31",
     "gatsby-plugin-manifest": "^2.2.26",
@@ -40,7 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.2.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^1.18.2",
     "typescript": "^3.7.2"
   },
