--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "classnames": "^2.2.6",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.31",
+    "gatsby-plugin-feed": "^2.3.20",
     "gatsby-plugin-manifest": "^2.2.26",
     "gatsby-plugin-offline": "^3.0.18",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.37",
+    "gatsby-plugin-sitemap": "^2.2.20",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.3.3",
