--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "gatsby": "^2.17.6",
-    "gatsby-image": "^2.2.31",
+    "gatsby-image": "^2.2.33",
     "gatsby-plugin-feed": "^2.3.20",
     "gatsby-plugin-manifest": "^2.2.26",
     "gatsby-plugin-offline": "^3.0.18",
@@ -25,10 +25,16 @@
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.37",
     "gatsby-plugin-sitemap": "^2.2.20",
+    "gatsby-remark-autolink-headers": "^2.1.18",
+    "gatsby-remark-images": "^3.1.31",
+    "gatsby-remark-prismjs": "^3.3.23",
+    "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.3.3",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
+    "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
