--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "gatsby": "^2.17.6",
+    "gatsby": "^2.18.6",
     "gatsby-image": "^2.2.33",
+    "gatsby-plugin-disqus": "^1.1.4",
     "gatsby-plugin-feed": "^2.3.20",
     "gatsby-plugin-google-analytics": "^2.1.28",
     "gatsby-plugin-manifest": "^2.2.26",
