--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,12 @@
 {
+    "parser":"babel-eslint",
+    "parserOptions": {
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true,
+        "modules": true
+      }
+    }, 
     "extends": [
         "airbnb",
         "airbnb/hooks",
