--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@loadable/component": "^5.11.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.18.6",
     "gatsby-image": "^2.2.33",
@@ -28,6 +29,7 @@
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.37",
     "gatsby-plugin-sitemap": "^2.2.20",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-autolink-headers": "^2.1.18",
     "gatsby-remark-images": "^3.1.31",
     "gatsby-remark-prismjs": "^3.3.23",
@@ -45,7 +47,10 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@loadable/babel-plugin": "^5.11.0",
+    "@loadable/webpack-plugin": "^5.7.1",
     "babel-eslint": "^10.0.3",
+    "babel-preset-gatsby": "^0.2.23",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
