--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{json,md,scss}\"",
     "start": "npm run develop",
     "serve": "gatsby serve --prefix-paths",
     "lint": "eslint --ext .jsx,.js src/",
