--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-feed": "^2.3.20",
     "gatsby-plugin-google-analytics": "^2.1.28",
+    "gatsby-plugin-google-tagmanager": "^5.7.0",
     "gatsby-plugin-manifest": "^2.2.26",
     "gatsby-plugin-netlify-cms": "^4.1.33",
     "gatsby-plugin-offline": "^3.0.18",
