--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^2.18.11",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-feed": "^2.3.20",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^2.1.28",
     "gatsby-plugin-google-tagmanager": "^5.7.0",
     "gatsby-plugin-manifest": "^2.2.26",
